// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs
// Create: https://www.dbdiagram.io/d

Table foodConsumed {
  id integer [primary key]
  id_meal_plan_meal integer
  id_food integer
  id_recipe integer
  id_unit_of_measurement integer
  quantity double
  date datetime
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table food {
  id integer [primary key]
  name varchar
  calories double
  protein double
  carbs double
  fat double
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table recipe {
  id integer [primary key]
  name varchar
  description text
  calories number
  preparation_time time 
  portion number
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table recipeFood {
  id integer [primary key]
  id_food integer
  id_recipe integer
  id_preparation_method integer
  id_unit_of_measurement integer
  nutrition_value double
  image mediumblob
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table preparationMethod {
  id integer [primary key]
  name varchar
  description text
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table user {
  id integer [primary key]
  name varchar
  email varchar
  password varchar
  role varchar
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table healthData {
  id integer [primary key]
  id_patient integer
  height double
  weight double
  bmi double
  record_date datetime
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table goal {
  id integer [primary key]
  description text
  start_date datetime
  end_date datetime
  status enum
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table goalObjective {
  id integer [primary key]
  id_goal integer
  id_objective integer
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table objective {
  id integer [primary key]
  name varchar
  icon varchar
  description text
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table preference {
  id integer [primary key]
  name varchar
  icon varchar
  notes text
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table mealPreference {
  id integer [primary key]
  id_meal integer
  id_preference integer
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table dietaryRestriction {
  id integer [primary key]
  name varchar
  description text
  icon varchar
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table mealPlanDietaryRestriction {
  id integer [primary key]
  id_dietary_resctriction integer
  id_meal_plan integer
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table report {
  id integer [primary key]
  id_patient integer
  type enum
  generated_at datetime
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table patient {
  id integer [primary key]
  id_user integer
  id_nutritionist integer
  birth_date datetime
  gender char
  height double
  weight double
  profile_picture mediumblob
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table nutritionist {
  id integer [primary key]
  id_user integer
  professional_register varchar
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table nutritionist_patient {
  id integer [primary key]
  id_nutritionist integer
  id_patient integer
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table mealPlan {
  id integer [primary key]
  id_patient integer
  id_nutritionist integer
  id_goal integer
  calories integer
  status enum
  expiration_date date
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}


Table mealPlanRecipe {
  id integer [primary key]
  id_recipe integer
  id_meal_plan_meal integer
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table meal {
  id integer [primary key]
  name varchar
  description text
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table mealPlanMeal {
  id integer [primary key]
  id_meal_plan integer
  id_meal integer
  time datetime
  day string
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table userGroup {
  id integer [primary key]
  id_user integer
  id_group integer
  role enum
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table group {
  id integer [primary key]
  name varchar
  decription text
  invite_code varchar
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Table unitOfMeasurement {
  id integer [primary key]
  name varchar
  symbol varchar
  created_at timestamp
  updated_at timestamp
  deleted_at timestamp
}

Table recipeGoal {
  id integer [primary key]
  id_goal integer
  id_recipe integer
  created_at timestamp
  deleted_at timestamp
  updated_at timestamp
}

Ref userGroup: userGroup.id_user > user.id 
Ref: group.id < userGroup.id_group
Ref: patient.id_user - user.id
Ref: nutritionist.id_user - user.id
Ref: nutritionist_patient.id_nutritionist - nutritionist.id
Ref: nutritionist_patient.id_patient - patient.id
Ref: patient.id_nutritionist > nutritionist.id
Ref: mealPlan.id_goal - goal.id
Ref: mealPlan.id_nutritionist - nutritionist.id
Ref: mealPlan.id_patient < patient.id
Ref: patient.id < report.id_patient
Ref: patient.id < healthData.id_patient
Ref: mealPlanRecipe.id_recipe - recipe.id
Ref: mealPlanRecipe.id_meal_plan_meal - mealPlanMeal.id
Ref: recipeFood.id_recipe > recipe.id
Ref: recipeFood.id_preparation_method > preparationMethod.id
Ref: recipeFood.id_food - food.id
Ref: recipeFood.id_unit_of_measurement > unitOfMeasurement.id
Ref: mealPreference.id_meal > meal.id
Ref: mealPreference.id_preference - preference.id
Ref: mealPlanDietaryRestriction.id_meal_plan - dietaryRestriction.id
Ref: mealPlanDietaryRestriction.id_meal_plan > mealPlan.id
Ref: mealPlanMeal.id_meal > meal.id
Ref: mealPlanMeal.id_meal_plan > mealPlan.id
Ref: foodConsumed.id_food > food.id
Ref: foodConsumed.id_meal_plan_meal > mealPlanMeal.id
Ref: foodConsumed.id_recipe > recipe.id
Ref: goalObjective.id_goal > goal.id
Ref: goalObjective.id_objective > objective.id
Ref: recipeGoal.id_goal > goal.id
Ref: recipeGoal.id_recipe > recipe.id
Ref: foodConsumed.id_unit_of_measurement - unitOfMeasurement.id


